SigmaCodebackup3rdSep/objects/Manufacturing_Run__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_date_of_Batch__c</fullName>
        <label>Expiry date of Batch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Manufacturing Run</relationshipLabel>
        <relationshipName>Manufacturing_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MR_Plant_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MR Plant Manager</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturing Run (MR Plant Manager)</relationshipLabel>
        <relationshipName>Manufacturing_Run1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Name__c</fullName>
        <label>Manufacturing Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Manufacturing Run</relationshipLabel>
        <relationshipName>Manufacturing_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PI_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Moved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produced_Quantity__c</fullName>
        <label>Produced Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Manufacturing Run</relationshipLabel>
        <relationshipName>Manufacturing_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Manufacturing Run</relationshipLabel>
        <relationshipName>Manufacturing_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QC_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QC Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Manufacturing Run</relationshipLabel>
        <relationshipName>Manufacturing_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Quantity__c</fullName>
        <label>Required Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                    <label>Planning123</label>
                </value>
                <value>
                    <fullName>Date Confirmed</fullName>
                </value>
                <value>
                    <fullName>Stock Reserved</fullName>
                </value>
                <value>
                    <fullName>Produced</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>QC Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Wastage__c</fullName>
        <label>System Wastage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Wastage__c</fullName>
        <formula>(System_Wastage__c + User_Wastage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Wastage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Wastage__c</fullName>
        <label>User Wastage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>manufactuting_Run_Plant_name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>manufactuting Run Plant name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturing Run</relationshipLabel>
        <relationshipName>Manufacturing_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Manufacturing Run</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Recipe__c</columns>
        <columns>Product__c</columns>
        <columns>Status__c</columns>
        <columns>Run_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Rec-{0000}</displayFormat>
        <label>Manufacturing Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Run</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>